nestjs-grpc/envoy-gateway/config/envoy.yaml

admin:
  access_log_path: /tmp/admin_access.log
  profile_path: /tmp/envoy.prof
  address:
    socket_address: 
        protocol: TCP
        address: 0.0.0.0
        port_value: 8001
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: 
        protocol: TCP
        address: 0.0.0.0
        port_value: 8005 
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
                - match: 
                    prefix: "/" 
                  route:  
                    cluster: nestjs_gateway 
              cors:
                  allow_origin_string_match:
                    - prefix: "*"
                  allow_methods: GET, PUT, DELETE, POST, OPTIONS
                  allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                  max_age: "1728000"
                  expose_headers: grpc-status,grpc-message
          http_filters:
            - name: envoy.filters.http.grpc_web
            - name: envoy.filters.http.cors
            - name: envoy.filters.http.router
  clusters:
  - name: nestjs_gateway
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: nestjs_gateway
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                protocol: TCP
                address: host.docker.internal
                port_value: 50051
